src/test/ui/editions/dyn-trait-sugg-2021.stderr
error[E0783]: trait objects without an explicit `dyn` are deprecated
  --> $DIR/dyn-trait-sugg-2021.rs:10:5
   |
LL |     Foo::hi(123);
   |     ^^^ help: use `dyn`: `<dyn Foo>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0783`.
